0.0.2
  13-12-19
  Development
  * #i0003: Integration of Radial Search
  * #i0002: Integration of route

0.0.1
  13-08-26
  Initial Release
  * Dirk Wildt  <http://wildt.at.die-netzmacher.de>