@@ -766,6 +766,7 @@ temp.route {
       tx_awomrhein_path.url                 AS 'tx_awomrhein_path.url',
       tx_awomrhein_path.uid                 AS 'tx_awomrhein_path.uid',
       tx_awomrhein_pathcat.title            AS 'tx_awomrhein_pathcat.title',
+      tx_awomrhein_pathcat.formlabelcss     AS 'tx_awomrhein_pathcat.formlabelcss',
       tx_awomrhein_pathcat.icons            AS 'tx_awomrhein_pathcat.icons',
       tx_awomrhein_pathcat.icon_offset_x    AS 'tx_awomrhein_pathcat.icon_offset_x',
       tx_awomrhein_pathcat.icon_offset_y    AS 'tx_awomrhein_pathcat.icon_offset_y',
@@ -780,6 +781,7 @@ temp.route {
       tx_awomrhein.url                      AS 'tx_awomrhein.url',
       tx_awomrhein.zip                      AS 'tx_awomrhein.zip',
       tx_awomrhein_cat.title                AS 'tx_awomrhein_cat.title',
+      tx_awomrhein_cat.formlabelcss         AS 'tx_awomrhein_cat.formlabelcss',
       tx_awomrhein_cat.icons                AS 'tx_awomrhein_cat.icons',
       tx_awomrhein_cat.icon_offset_x        AS 'tx_awomrhein_cat.icon_offset_x',
       tx_awomrhein_cat.icon_offset_y        AS 'tx_awomrhein_cat.icon_offset_y',
